<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityUsuario"
    android:background="@color/fundo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"

        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_acesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_acessar_sua_conta"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nome"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_acesso"
        app:layout_constraintStart_toStartOf="@id/tv_acesso"/>



    <EditText
        android:id="@+id/h_nome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nome"
        tools:layout_editor_absoluteX="47dp"/>


    <TextView
        android:id="@+id/tv_lembrar_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_lembrar_meu_nome"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_nome" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_nome" />

    <Button
        android:id="@+id/btn_acessar"
        android:layout_width="232dp"
        android:layout_height="53dp"
        android:text="Acessar"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lembrar_nome" />


</androidx.constraintlayout.widget.ConstraintLayout>